[Pagination] Added pagination

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,7 +30,7 @@
     <% end %>
   </tbody>
 </table>
-
+<%= will_paginate @books %>
 <%= link_to "Back",
             girls_path,
             :class => 'btn btn-primary' %>
