--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
 	<div class="row">
 		<div class="span1"></div>
 		<div class="span9">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+
 			<%= yield %>
 		</div>
 	</div>
