--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GirlBooks</title>
+  <title>Library</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
+  <%= stylesheet_link_tag "application", :media => "all" %>
+
+  <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic|Roboto:400,100,300|Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
-<div class="container">
-	<div class="row">
-		<div class="span1"></div>
-		<div class="span9">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-
-			<%= yield %>
-		</div>
-	</div>
-</div>
+<div class="container-fluid main-container">
+  <div class="row-fluid">
+    <div class="span12">
+      <%= bootstrap_flash %>
+      <% if user_signed_in? %>
+        <%= render "/layouts/shared/appheader" -%>
+        <%= bootstrap_flash %>
+        Logged in as <strong><%= current_user.email %></strong>.
+        <%= link_to 'Edit profile', edit_user_registration_path %> |
+        <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+        <%= link_to "Change your password", edit_user_registration_path %>
+        <%= yield %>
+      <% else %>
+        <%= yield %>
+      <% end %>
+    </div>
+  </div><!--/row-->
+</div> <!-- /container -->
 </body>
 </html>
