--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,17 +1,40 @@
-<h2>Sign up</h2>
-
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
-    <%= f.input :password, :required => true %>
-    <%= f.input :password_confirmation, :required => true %>
+<div class="sign-in-form">
+  <div class="row-fluid">
+    <div class="span6 offset3 centered">
+      <h1>Sign up</h1>
+      <h3>Please register to access the application.</h3>
+    </div>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
+  <div class="row-fluid">
+    <div class="centered">
+      <div class="auth-form">
+        <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+          <%= f.error_notification %>
 
-<%= render "users/shared/links" %>
+          <div class="form-inputs">
+            <%= f.input :email, required: true, required: true, wrapper: :prepend, error: true do %>
+              <span class="add-on"><i class="icon-envelope"></i></span>
+            <%= f.input_field :email, placeholder: "Email" %>
+            <% end %>
+            <%= f.input :password, required: true, wrapper: :prepend, error: true do %>
+              <span class="add-on"><i class="icon-lock"></i></span>
+            <%= f.input_field :password, placeholder: "Password" %>
+            <% end %>
+            <%= f.input :password_confirmation, required: true, wrapper: :prepend, error: true do %>
+              <span class="add-on"><i class="icon-lock"></i></span>
+            <%= f.input_field :password_confirmation, placeholder: "Password" %>
+            <% end %>
+          </div>
+
+            <%= f.button :submit, "Sign up" %>
+        <% end %>
+
+        <%= render "users/shared/links" %>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
