[Populator] Added populator

--- a/app/views/girls/index.html.erb
+++ b/app/views/girls/index.html.erb
@@ -43,7 +43,7 @@
     <% end %>
   </tbody>
 </table>
-
+<%= will_paginate @girls %>
 <%= link_to "Add A New Girl",
             new_girl_path,
             :class => 'btn btn-primary' %>
