--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,27 +1,52 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-
-    <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
-    <%= f.input :password_confirmation, :required => false %>
-    <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
+<div class="sign-in-form">
+  <div class="row-fluid">
+    <div class="span6 offset3 centered">
+      <h1>Edit <%= resource_name.to_s.humanize %></h1>
+      <h3>Update your credentials.</h3>
+    </div>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+  <div class="row-fluid">
+    <div class="centered">
+      <div class="auth-form">
+        <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+          <%= f.error_notification %>
+
+          <div class="form-inputs">
+            <%= f.input :email, required: true, required: true, wrapper: :prepend, error: true do %>
+              <span class="add-on"><i class="icon-envelope"></i></span>
+            <%= f.input_field :email, placeholder: "Email" %>
+            <% end %>
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+            <% end %>
+            <%= f.input :password, required: false, wrapper: :prepend, error: true do %>
+              <span class="add-on"><i class="icon-lock"></i></span>
+            <%= f.input_field :password, placeholder: "Password" %>
+            <% end %>
+            <%= f.input :password_confirmation, required: false, wrapper: :prepend, error: true do %>
+              <span class="add-on"><i class="icon-lock"></i></span>
+            <%= f.input_field :password_confirmation, placeholder: "Password Confirmation" %>
+            <% end %>
+            <%= f.input :current_password, required: false, wrapper: :prepend, error: true do %>
+              <span class="add-on"><i class="icon-lock"></i></span>
+            <%= f.input_field :current_password, placeholder: "Current Password" %>
+            <% end %>
+          </div>
+            <%= f.button :submit, "Update" %>
+        <% end %>
+
+        <%= render "users/shared/links" %>
+        <h3>Cancel my account</h3>
+
+        <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+
+        <%= link_to "Back", :back %>
+
+      </div>
+    </div>
   </div>
-<% end %>
+</div>
 
-<h3>Cancel my account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
 
-<%= link_to "Back", :back %>
