--- a/app/views/girls/index.html.erb
+++ b/app/views/girls/index.html.erb
@@ -16,7 +16,7 @@
   <tbody>
     <% @girls.each do |girl| %>
       <tr>
-        <td><%= girl.name %></td>
+        <td><h1><%= girl.name %></h1></td>
         <td><%= girl.age %></td>
         <td><%= girl.bio %></td>
         <td><%= link_to "Procure A New Book",
