--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,16 +13,12 @@
 <body>
 
 <div class="container-fluid main-container">
+  <div class="row-content">
   <div class="row-fluid">
     <div class="span12">
-      <%= bootstrap_flash %>
       <% if user_signed_in? %>
         <%= render "/layouts/shared/appheader" -%>
         <%= bootstrap_flash %>
-        Logged in as <strong><%= current_user.email %></strong>.
-        <%= link_to 'Edit profile', edit_user_registration_path %> |
-        <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-        <%= link_to "Change your password", edit_user_registration_path %>
         <%= yield %>
       <% else %>
         <%= yield %>
@@ -30,5 +26,6 @@
     </div>
   </div><!--/row-->
 </div> <!-- /container -->
+</div>
 </body>
 </html>
